fixed the image distortion on some mobile and tablet devices

--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -200,6 +200,10 @@ input{
         display: flex;
     }
 
+    .image-grid img{
+        height: 311px;
+    }
+
     .content{
         width: 100%;
         margin-bottom: 50px;
@@ -214,5 +218,17 @@ input{
         font-size: 35px;
         line-height: 45px;
         margin-bottom: 20px;
+    }
+}
+
+@media(max-width: 800px){
+    .image-grid img {
+        height: 256.5px;
+    }
+}
+
+@media(max-width: 650px){
+    .image-grid img{
+        height: 132.73px;
     }
 }
